--- a/inventory.ini
+++ b/inventory.ini
@@ -1,14 +1,14 @@
 [frontend] 
 172.31.89.68 COURSE=DevOps DURATION=10HR STUDENT=Charitha ansible_user=ec2-user ansible_password=DevOps321
-; 172.31.42.49 COURSE=Variables DURATION=1.5HR STUDENT=Charitha ansible_user=ec2-user ansible_password=DevOps321
+172.31.93.71 COURSE=Variables DURATION=1.5HR STUDENT=Charitha ansible_user=ec2-user ansible_password=DevOps321
 
 [backend]
 172.31.89.68
-172.31.42.49
+172.31.93.71
 
 [database]
 172.31.89.68
-172.31.42.49
+172.31.93.71
 
 [local]
 localhost
