--- a/12-vars.preference.yaml
+++ b/12-vars.preference.yaml
@@ -11,7 +11,10 @@
     private: false
   tasks:
   - name: print the greeting
-    vars:
-      GREETING: "Hello from Task"
+    # vars:
+    #   GREETING: "Hello from Task"
     ansible.builtin.debug:
       msg: "{{ GREETING }}"
+
+# OUTPUT
+# Hello From Task (comment after output)
