--- a/12-vars.preference.yaml
+++ b/12-vars.preference.yaml
@@ -17,7 +17,9 @@
       msg: "{{ GREETING }}"
 
 # OUTPUT
+# Hello from args or command line
 # Hello From Task (comment after output)
 # Hello from File (same comment after output)
 # Hello from Prompt (same here also comment after output)
 # Hello from Play
+# Hello from Inventory
