--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,6 @@
 [frontend] 
 172.31.89.68 COURSE=DevOps DURATION=10HR STUDENT=Charitha ansible_user=ec2-user ansible_password=DevOps321
-172.31.93.71 COURSE=Variables DURATION=1.5HR STUDENT=Charitha ansible_user=ec2-user ansible_password=DevOps321
+;172.31.93.71 COURSE=Variables DURATION=1.5HR STUDENT=Charitha ansible_user=ec2-user ansible_password=DevOps321
 
 [backend]
 172.31.89.68
