--- a/16-conditions.yaml
+++ b/16-conditions.yaml
@@ -1,5 +1,6 @@
 - name: Playbook control using ansible facts
   hosts: frontend
+  become: yes
   tasks:
   - name: Install nginx if RedHat
     ansible.builtin.dnf:
