--- a/18-loops.yaml
+++ b/18-loops.yaml
@@ -1,5 +1,6 @@
 - name: Install packages
   hosts: frontend
+  become: yes
   tasks:
   - name: List of packages installed
     ansible.builtin.package:
